@@ -105,11 +105,8 @@
       <locale name="C">
 	<short>Cursor theme</short>
 	<long>
-	  Cursor theme name. Used only by Xservers that support
-	  Xcursor, such as XFree86 4.3 and later. This value is only
-	  propagated to the X server at the start of each session, so
-	  changing it mid-session won't have an effect until the next time you
-	  log in.
+	  Cursor theme name. Used only by Xservers that support Xcursor,
+	  such as XFree86 4.3 and later. 
 	</long>
       </locale>
     </schema>
@@ -122,10 +119,7 @@
       <locale name="C">
 	<short>Cursor size</short>
 	<long>
-	  Size of the cursor referenced by cursor_theme.  This value is
-	  only propagated to the X server start of each session, so
-	  changing it mid-session won't have an effect until the next
-	  time you log in.
+	  Size of the cursor referenced by cursor_theme.
 	</long>
       </locale>
     </schema>
