@@ -1,3 +1,9 @@
+2005-11-14  Sebastien Bacher  <seb128@debian.org>
+
+	* schemas/desktop_gnome_peripherals_mouse.schemas.in:
+	Updated the descriptions for the cursor changes with the new GTK
+	(Closes: #311524).
+
 2005-11-13  Jürg Billeter  <j@bitron.ch>
 
 	* schemas/desktop_gnome_peripherals_keyboard.schemas.in:
